--- a/nd4j/nd4j-backends/nd4j-backend-impls/nd4j-cuda/pom.xml
+++ b/nd4j/nd4j-backends/nd4j-backend-impls/nd4j-cuda/pom.xml
@@ -243,7 +243,7 @@
             <groupId>org.nd4j</groupId>
             <artifactId>libnd4j</artifactId>
             <version>${project.version}</version>
-            <type>jar</type>
+            <type>zip</type>
             <classifier>${javacpp.platform}-cuda-${cuda.version}</classifier>
             <scope>provided</scope>
         </dependency>
