--- a/nd4j/nd4j-backends/nd4j-backend-impls/nd4j-native/pom.xml
+++ b/nd4j/nd4j-backends/nd4j-backend-impls/nd4j-native/pom.xml
@@ -83,7 +83,7 @@
             <groupId>org.nd4j</groupId>
             <artifactId>libnd4j</artifactId>
             <version>${project.version}</version>
-            <type>jar</type>
+            <type>zip</type>
             <classifier>${javacpp.platform}${javacpp.platform.extension}</classifier>
             <scope>provided</scope>
         </dependency>
